--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -1,10 +1,12 @@
 .canvasContainer {
+  background-color: red;
   height: 100%;
   width: 100%;
   position: relative;
 }
 
 .canvasArea {
+    background-color: green;
     height: 100%;
     width: 100%;
 }
