--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -17,4 +17,13 @@
   left: 0;
   width: 100%;
   height: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.sizetoolbar {
+  position: absolute;
+  top: 60px;
+  width: 200px;
+  height: 50px;
 }
